migration from google/cryptojs to brix/crypto-js

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 
 	</body>
 
-	<!-- Include the AES algorithm of the crypto library -->
-	<script src="assets/js/aes.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="assets/js/script.js"></script>
 </html>
